--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <tui-root>
-  <p>And yet, somehow it works!</p>
+  <air-header></air-header>
+  <router-outlet></router-outlet>
+  <air-footer></air-footer>
 </tui-root>
