--- a/src/app/shared/styles/_colors.scss
+++ b/src/app/shared/styles/_colors.scss
@@ -19,6 +19,7 @@ $color-neutral-70: rgba(116 118 122 / 20%);
 $color-neutral-80: #f5f5f5;
 $color-neutral-90: rgba(241 243 246 / 15%);
 $color-neutral-100: #fff;
+$color-neutral-black: #000;
 $color-highlight-green0: #7f8906;
 $color-highlight-yellow0: #f1c933;
 $color-highlight-yellow30: rgba(241 201 51 / 30%);
