--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -11,19 +11,19 @@
   max-width: 1040px;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 2rem auto;
   row-gap: 1rem;
 
   @media (width <= 1080px) {
-    margin: 0 20px;
+    margin: 20px;
   }
 
   @media (width <= 768px) {
-    margin: 0 15px;
+    margin: 15px;
   }
 
   @media (width <= 640px) {
-    margin: 0 10px;
+    margin: 10px;
   }
 }
 
