--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -9,7 +9,7 @@
             <img src="assets/icons/mastercard.svg" alt="Mastercard payment system" />
           </li>
           <li class="icon-item">
-            <img src="assets/icons/amason-pay.svg" alt="Amason-pay payment system" />
+            <img src="assets/icons/amazon-pay.svg" alt="Amazon-pay payment system" />
           </li>
           <li class="icon-item">
             <img src="assets/icons/american-express.svg" alt="American express payment system" />
