--- a/src/app/core/pages/not-found-page/not-found-page.component.html
+++ b/src/app/core/pages/not-found-page/not-found-page.component.html
@@ -1,1 +1,12 @@
-<p>not-found-page works!</p>
+<div class="page-not-found">
+  <div class="wrapper">
+    <div class="error-text">
+      <p>Page not found</p>
+      <p>But you can find and book your flight</p>
+      <a tuiButton [routerLink]="'/'">here</a>
+    </div>
+    <div class="error-text">
+      <div class="error">404</div>
+    </div>
+  </div>
+</div>
