--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<header class="header">
+  <div class="content-wrapper">
+    <a routerLink="/" class="logo-link">
+      <img src="assets/logo.svg" alt="Logo" class="logo" />
+    </a>
+    <air-progress-bar *ngIf="showProgressBar"></air-progress-bar>
+  </div>
+</header>
