--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -14,6 +14,26 @@
   column-gap: 1rem;
 }
 
+.buttons-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 1rem;
+}
+
 .logo-link {
   line-height: 0;
+}
+
+.shopping-bag {
+  width: min-content;
+  height: min-content;
+}
+
+.currency-form {
+  width: 115px;
+}
+
+.date-format-form {
+  width: 150px;
 }
