feat: add header style

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -21,7 +21,8 @@
       <button
         tuiIconButton
         routerLink="/user/cart"
-        size="xs"
+        size="m"
+        shape="rounded"
         type="button"
         appearance="icon"
         icon="tuiIconShoppingBag"
