--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,8 +1,13 @@
 @use '../../../shared/styles/_colors' as *;
 
+:host {
+  position: sticky;
+  top: 0;
+}
+
 .header {
   padding: 1.5rem;
-  background: $color-neutral-70;
+  background: $color-neutral-100;
 }
 
 .content-wrapper {
@@ -11,7 +16,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
-  column-gap: 1rem;
+  column-gap: 1.5rem;
 }
 
 .buttons-wrapper {
@@ -25,20 +30,15 @@
   line-height: 0;
 }
 
-.shopping-bag {
-  width: min-content;
-  height: min-content;
-}
-
 .form {
   display: flex;
   gap: 0.5rem;
 }
 
 .date-format {
-  width: 160px;
+  width: 135px;
 }
 
 .currency {
-  width: 115px;
+  width: 80px;
 }
