--- a/src/app/user/components/bookings-table/bookings-table.component.html
+++ b/src/app/user/components/bookings-table/bookings-table.component.html
@@ -8,7 +8,7 @@
       <th *tuiHead="'flight'" tuiTh>Flight</th>
       <th *tuiHead="'triptype'" tuiTh>Type trip</th>
       <th *tuiHead="'dates'" tuiTh>Data & Time</th>
-      <th *tuiHead="'passengers'" tuiTh>Passengers</th>
+      <th *tuiHead="'passengers'" [sorter]="null" tuiTh>Passengers</th>
       <th *tuiHead="'price'" tuiTh>Price</th>
       <th *tuiHead="'actions'" tuiTh [sorter]="null"></th>
     </tr>
@@ -32,16 +32,22 @@
         {{ item.passengers.adults + item.passengers.children || 0 + item.passengers.infants || 0 }}
       </td>
       <td *tuiCell="'actions'" tuiTd>
-        <button
-          tuiIconButton
-          appearance="flat"
-          size="s"
-          icon="tuiIconTrash"
-          title="Remove"
-          shape="rounded"
-          type="button"
-          class="remove"
-        ></button>
+        <tui-hosted-dropdown tuiDropdownAlign="right" [sided]="true" [content]="dropdown">
+          <button
+            tuiIconButton
+            appearance="icon"
+            icon="tuiIconMoreVertical"
+            type="button"
+            size="xs"
+            class="menu-button"
+          ></button>
+        </tui-hosted-dropdown>
+        <ng-template #dropdown let-close="close">
+          <tui-data-list>
+            <button tuiOption (click)="edit(item)">Edit</button>
+            <button tuiOption (click)="remove(item)">Remove</button>
+          </tui-data-list>
+        </ng-template>
       </td>
     </tr>
   </tbody>
