--- a/src/app/booking/components/flight-card/flight-card.component.scss
+++ b/src/app/booking/components/flight-card/flight-card.component.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   background-color: colors.$color-neutral-100;
+  border-top: 13px transparent;
   border-left: 1px solid colors.$color-neutral-60;
   cursor: pointer;
 }
@@ -45,6 +46,7 @@
 
 .selected {
   height: 83px;
+  border-top: none;
   border-bottom: 4px solid transparent;
 }
 
