feat: implement SeatsDirective (for coloring based on available seats)

--- a/src/app/booking/components/flight-card/flight-card.component.html
+++ b/src/app/booking/components/flight-card/flight-card.component.html
@@ -1,5 +1,10 @@
 <ng-container *ngIf="flight">
-  <div class="card" [ngClass]="{ 'no-flight': !flight.availableSeats, selected: selected }" (click)="onSelectCard()">
+  <div
+    class="card"
+    [airSeats]="[flight.seats, flight.availableSeats]"
+    [ngClass]="{ 'no-flight': !flight.availableSeats, selected: selected }"
+    (click)="onSelectCard()"
+  >
     <span class="date">{{ flight.departureDate | date : 'dd MMM' : 'Z' }}</span>
     <span class="weekday">Monday</span>
     <span *ngIf="flight.availableSeats; else noflight" class="price">{{ flight.price | currency : 'EUR' }}</span>
