--- a/src/app/booking/components/flight-selector/flight-selector.component.scss
+++ b/src/app/booking/components/flight-selector/flight-selector.component.scss
@@ -10,14 +10,17 @@
 
 .selector {
   max-width: 1130px;
+  height: 83px;
   margin: 0 auto;
   position: relative;
+  display: flex;
+  align-items: flex-end;
 }
 
 .step-button {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(calc(-50% + 6px));
   z-index: 10;
 
   &-prev {
