--- a/src/app/booking/components/flight-selector/flight-selector.component.html
+++ b/src/app/booking/components/flight-selector/flight-selector.component.html
@@ -16,7 +16,7 @@
         *tuiItem
         [flight]="flight"
         [index]="i"
-        [selected]="i === selectedIndex"
+        [isSelected]="i === selectedIndex"
         (cardSelect)="switchSelectedCard($event)"
       ></air-flight-card>
     </ng-container>
