--- a/src/app/user/components/bookings-table/bookings-table.component.html
+++ b/src/app/user/components/bookings-table/bookings-table.component.html
@@ -1,8 +1,8 @@
 <table tuiTable [columns]="columns" class="table">
   <thead>
     <tr tuiThGroup>
-      <th *tuiHead="'checkbox'" [sorter]="null" tuiTh>
-        <tui-checkbox [formControl]="selectAll"></tui-checkbox>
+      <th *tuiHead="'select'" [sorter]="null" tuiTh>
+        <tui-checkbox [(ngModel)]="selectAll" (change)="checkAll($event)"></tui-checkbox>
       </th>
       <th *tuiHead="'number'" tuiTh>No.</th>
       <th *tuiHead="'flight'" tuiTh>Flight</th>
@@ -15,8 +15,8 @@
   </thead>
   <tbody *tuiLet="bookings | tuiTableSort as sortedBookings" tuiTbody [data]="sortedBookings">
     <tr *ngFor="let item of sortedBookings; let index = index" tuiTr>
-      <td *tuiCell="'checkbox'" tuiTd>
-        <tui-checkbox></tui-checkbox>
+      <td *tuiCell="'select'" tuiTd>
+        <tui-checkbox [(ngModel)]="item.state" (change)="isAllChecked()"></tui-checkbox>
       </td>
       <td *tuiCell="'number'" tuiTd>
         {{ item.flightNumber }}
@@ -30,6 +30,9 @@
       </td>
       <td *tuiCell="'passengers'" tuiTd>
         {{ item.passengers.adults + item.passengers.children || 0 + item.passengers.infants || 0 }}
+      </td>
+      <td *tuiCell="'price'" tuiTd>
+        {{ item.price }}
       </td>
       <td *tuiCell="'actions'" tuiTd>
         <tui-hosted-dropdown tuiDropdownAlign="right" [sided]="true" [content]="dropdown">
