--- a/src/app/user/components/bookings-table/bookings-table.component.html
+++ b/src/app/user/components/bookings-table/bookings-table.component.html
@@ -1,7 +1,10 @@
 <table tuiTable [columns]="columns" class="table">
   <thead>
+    <h1 class="title">Cart</h1>
+  </thead>
+  <thead>
     <tr tuiThGroup>
-      <th *tuiHead="'select'" [sorter]="null" tuiTh>
+      <th *tuiHead="'select'" [sorter]="null" tuiTh [sticky]="true">
         <tui-checkbox [(ngModel)]="selectAll" (change)="checkAll($event)"></tui-checkbox>
       </th>
       <th *tuiHead="'number'" tuiTh>No.</th>
@@ -18,21 +21,27 @@
       <td *tuiCell="'select'" tuiTd>
         <tui-checkbox [(ngModel)]="item.state" (change)="isAllChecked()"></tui-checkbox>
       </td>
-      <td *tuiCell="'number'" tuiTd>
+      <td *tuiCell="'number'" tuiTd class="flight-number">
         {{ item.flightNumber }}
       </td>
-      <td *tuiCell="'flight'" tuiTd>{{ item.fligthsData[0].departure }} - {{ item.fligthsData[0].arrival }}</td>
+      <td *tuiCell="'flight'" tuiTd [innerHTML]="item.fligthsData | endpoints"></td>
       <td *tuiCell="'triptype'" tuiTd>
-        {{ item.flightType }}
+        {{ item.flightType === 'oneway' ? 'One way' : 'Round trip' }}
       </td>
-      <td *tuiCell="'dates'" tuiTd>
-        {{ item.departureDate }}
-      </td>
+      <td *tuiCell="'dates'" tuiTd [innerHTML]="item.fligthsData | flightsDates"></td>
       <td *tuiCell="'passengers'" tuiTd>
-        {{ item.passengers.adults + item.passengers.children || 0 + item.passengers.infants || 0 }}
+        <div class="passenger">
+          {{ 'adults' | passengersData : item.passengers.adults }}
+        </div>
+        <div class="passenger">
+          {{ 'children' | passengersData : item.passengers.children }}
+        </div>
+        <div class="passenger">
+          {{ 'infants' | passengersData : item.passengers.infants }}
+        </div>
       </td>
-      <td *tuiCell="'price'" tuiTd>
-        {{ item.price }}
+      <td *tuiCell="'price'" tuiTd class="price">
+        {{ item.price | currency }}
       </td>
       <td *tuiCell="'actions'" tuiTd>
         <tui-hosted-dropdown tuiDropdownAlign="right" [sided]="true" [content]="dropdown">
@@ -51,6 +60,30 @@
             <button tuiOption (click)="remove(item)">Remove</button>
           </tui-data-list>
         </ng-template>
+      </td>
+    </tr>
+    <tr class="tui-table__tr">
+      <td colspan="8" class="tui-table__td">
+        <div class="total">
+          <button tuiButton appearance="secondary" size="s" routerLink="/">+ Add new trip</button>
+          <div class="total">
+            <div class="tui-text_h6">Total</div>
+            <div class="tui-text_h5 total-price" [innerHTML]="priceOfSelectedBookings() | currency"></div>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr class="tui-table__tr">
+      <td colspan="8" class="tui-table__td">
+        <div class="total">
+          <div class="promo">
+            <!-- TODO: add promocode-input -->
+          </div>
+          <div class="continue">
+            <div class="tui-text_body-m"><span [innerHTML]="countOfSelectedBookings()"></span> selected</div>
+            <button tuiButton size="m">Continue</button>
+          </div>
+        </div>
       </td>
     </tr>
   </tbody>
