--- a/src/app/booking/components/flight-carousel/flight-carousel.component.html
+++ b/src/app/booking/components/flight-carousel/flight-carousel.component.html
@@ -1,4 +1,4 @@
-<div class="selector">
+<div class="selector" [ngClass]="{ hidden: !isVisible }">
   <button
     class="step-button step-button-prev"
     tuiIconButton
