--- a/src/app/booking/pages/booking-flights-page/booking-flights-page.component.html
+++ b/src/app/booking/pages/booking-flights-page/booking-flights-page.component.html
@@ -1,1 +1,13 @@
-<air-flight-selector [flights]="flights"></air-flight-selector>
+<div class="flight">
+  <air-flight-carousel
+    [flights]="flights"
+    [isVisible]="!isSelected"
+    (switchFlight)="onSwitchFlight($event)"
+  ></air-flight-carousel>
+
+  <air-flight-details
+    [flight]="flights[switchedFlightIdx]"
+    [isFlightSelected]="isSelected"
+    (selectFlight)="onSelectFlight($event)"
+  ></air-flight-details>
+</div>
