--- a/src/app/user/components/bookings-table/bookings-table.component.scss
+++ b/src/app/user/components/bookings-table/bookings-table.component.scss
@@ -19,7 +19,7 @@ th {
 }
 
 td {
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 0.75rem !important;
   vertical-align: middle !important;
   border-left: none;
   border-right: none;
@@ -35,6 +35,7 @@ tr {
 .flight-number {
   color: var(--tui-primary);
   font-weight: 600;
+  cursor: pointer;
 }
 
 .passenger {
@@ -54,7 +55,6 @@ tr {
 
 .total-price {
   background: linear-gradient(90deg, #11397e 0%, #005abc 100%);
-  background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
 
@@ -65,4 +65,12 @@ tr {
   display: flex;
   gap: 1rem;
   align-items: center;
+}
+
+.flex {
+  display: flex;
+
+  // justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
