--- a/src/app/booking/components/flight-details/flight-details.component.html
+++ b/src/app/booking/components/flight-details/flight-details.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="flight">
-  <div class="flight-details">
+  <div class="flight-details" [ngClass]="{ selected: isFlightSelected }">
     <div class="flight-details-left">
       <air-date-time-widget
         [isDeparture]="true"
@@ -11,7 +11,7 @@
         <span class="flight-time">{{ flight.flightDuration | humanReadableTime }}</span>
         <div class="flight-icon">
           <span class="flight-icon-line"></span>
-          <tui-svg class="flight-iconz" src="/assets/icons/flight-type-right.svg"></tui-svg>
+          <tui-svg [src]="getFlightIcon()"></tui-svg>
           <span class="flight-icon-line"></span>
         </div>
         <span class="flight-connections">{{ flight.connections | flightConnections }}</span>
@@ -37,9 +37,7 @@
 
         <div class="price">
           <span *ngIf="!isFlightSelected" class="price-label">Price</span>
-          <span class="price-value" [ngClass]="{ selected: isFlightSelected }">{{
-            flight.price | currency : 'EUR'
-          }}</span>
+          <span class="price-value">{{ flight.price | currency : 'EUR' }}</span>
         </div>
       </div>
 
@@ -49,7 +47,7 @@
         tuiButton
         size="m"
         type="button"
-        (click)="onSelectFlight(true)"
+        (click)="onConfirmFlight(true)"
       >
         Select
       </button>
@@ -58,7 +56,7 @@
 </ng-container>
 
 <ng-template #editButton>
-  <button class="edit-button" tuiButton size="s" appearance="outline" type="button" (click)="onSelectFlight(false)">
+  <button class="edit-button" tuiButton size="s" appearance="outline" type="button" (click)="onConfirmFlight(false)">
     Edit
   </button>
 </ng-template>
