refactor: review comments

--- a/src/app/user/components/bookings-table/bookings-table.component.html
+++ b/src/app/user/components/bookings-table/bookings-table.component.html
@@ -1,12 +1,9 @@
 <table tuiTable [columns]="columns" class="table">
   <thead>
-    <h1 class="title">{{ title }}</h1>
-  </thead>
-  <thead>
     <tr tuiThGroup>
       <th *tuiHead="'number'" [sorter]="null" tuiTh>
         <div class="flexbox">
-          <tui-checkbox *ngIf="title === 'Cart'" [(ngModel)]="allSelected" (change)="selectAll($event)"></tui-checkbox>
+          <tui-checkbox *ngIf="isEditable" [(ngModel)]="areAllSelected" (change)="selectAll()"></tui-checkbox>
           <span>No.</span>
         </div>
       </th>
@@ -22,15 +19,21 @@
     <tr *ngFor="let item of sortedBookings; let index = index" tuiTr>
       <td *tuiCell="'number'" tuiTd class="flight-number td">
         <div class="flexbox">
-          <tui-checkbox *ngIf="title === 'Cart'" [(ngModel)]="item.state" (change)="isAllSelected()"></tui-checkbox>
+          <tui-checkbox *ngIf="isEditable" [(ngModel)]="item.isSelected" (change)="isAllSelected()"></tui-checkbox>
           <a (click)="details(item)">{{ item.flightNumber }}</a>
         </div>
       </td>
-      <td *tuiCell="'flight'" tuiTd [innerHTML]="item.fligthsData | endpoints" class="td"></td>
+      <td *tuiCell="'flight'" tuiTd class="td">
+        <div *ngFor="let flight of item.flightsData; let i = index">{{ flight.departure }} - {{ flight.arrival }}</div>
+      </td>
       <td *tuiCell="'triptype'" tuiTd class="td">
         {{ item.flightType === 'oneway' ? 'One way' : 'Round trip' }}
       </td>
-      <td *tuiCell="'dates'" tuiTd [innerHTML]="item.fligthsData | flightsDates" class="td"></td>
+      <td *tuiCell="'dates'" tuiTd class="td">
+        <div *ngFor="let flight of item.flightsData; let i = index">
+          {{ flight | flightsDates }}
+        </div>
+      </td>
       <td *tuiCell="'passengers'" tuiTd class="td">
         <div class="passenger">
           {{ 'adults' | passengersData : item.passengers.adults }}
@@ -58,32 +61,32 @@
         </tui-hosted-dropdown>
         <ng-template #dropdown let-close="close">
           <tui-data-list>
-            <button *ngIf="title === 'Cart'" tuiOption (click)="edit(item)">Edit</button>
-            <button *ngIf="title === 'Cart'" tuiOption (click)="remove(item)">Remove</button>
-            <button *ngIf="title === 'Account'" tuiOption (click)="details(item)">Details</button>
+            <button *ngIf="isEditable" tuiOption (click)="edit(item)">Edit</button>
+            <button *ngIf="isEditable" tuiOption (click)="remove(item)">Remove</button>
+            <button *ngIf="!isEditable" tuiOption (click)="details(item)">Details</button>
           </tui-data-list>
         </ng-template>
       </td>
     </tr>
-    <tr *ngIf="title === 'Cart'" class="tui-table__tr">
+    <tr *ngIf="isEditable" class="tui-table__tr">
       <td colspan="8" class="tui-table__td">
         <div class="total">
           <button tuiButton appearance="secondary" size="s" routerLink="/">+ Add new trip</button>
           <div class="total">
             <div class="tui-text_h6">Total</div>
-            <div class="tui-text_h5 total-price" [innerHTML]="priceOfSelectedBookings() | currency"></div>
+            <div class="tui-text_h5 total-price">{{ priceOfSelectedBookings() | currency }}</div>
           </div>
         </div>
       </td>
     </tr>
-    <tr *ngIf="title === 'Cart'" class="tui-table__tr">
+    <tr *ngIf="isEditable" class="tui-table__tr">
       <td colspan="8" class="tui-table__td">
         <div class="total">
           <div class="promo">
             <!-- TODO: add promocode-input -->
           </div>
           <div class="flexbox">
-            <div class="tui-text_body-m"><span [innerHTML]="countOfSelectedBookings()"></span> selected</div>
+            <div class="tui-text_body-m">{{ countOfSelectedBookings() }} selected</div>
             <button tuiButton size="m">Continue</button>
           </div>
         </div>
