feat: implement login logic and saving token to localStorage

--- a/src/app/core/components/tabbed-forms/tabbed-forms.component.html
+++ b/src/app/core/components/tabbed-forms/tabbed-forms.component.html
@@ -5,7 +5,7 @@
   </tui-tabs>
 
   <ng-container *ngIf="activeTabIdx === 0; else signup">
-    <air-login-form (formSubmit)="onLoginFormSubmit()"></air-login-form>
+    <air-login-form (formSubmit)="onLoginFormSubmit($event)"></air-login-form>
   </ng-container>
 
   <ng-template #signup>
