--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -17,7 +17,14 @@
         </tui-select>
       </form>
 
-      <button tuiButton size="s" type="button" icon="tuiIconUser" (click)="openLoginModal()">Sign in</button>
+      <ng-container *tuiLet="user$ | async as user">
+        <button *ngIf="!user" tuiButton size="s" type="button" icon="tuiIconUser" (click)="openLoginModal()">
+          Sign in
+        </button>
+        <button *ngIf="user" tuiButton size="s" type="button" icon="tuiIconUser" routerLink="/user/account">
+          {{ user.firstName }} {{ user.lastName }}
+        </button>
+      </ng-container>
       <button
         tuiIconButton
         routerLink="/user/cart"
